# Ferry-SFTP

./: CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/edit/: mod.rs
src-tauri/src/localfs/: commands.rs  mod.rs
src-tauri/src/sftp/: commands.rs  connection.rs  manager.rs
src-tauri/src/store/: commands.rs  mod.rs  secrets.rs
src-tauri/src/transfers/: commands.rs  mod.rs  walk.rs
src/app/: globals.css  layout.tsx
src/components/browser/: Breadcrumbs.tsx  DualPane.tsx  FilePane.tsx  FileRow.tsx  PermissionsDialog.tsx
src/components/common/: Button.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  EmptyState.tsx  FileIcon.tsx  Modal.tsx  PromptDialog.tsx  ToastStack.tsx
src/components/connection/: ConnectScreen.tsx  ConnectingScreen.tsx  ConnectionDialog.tsx  ConnectionListItem.tsx  ConnectionStatusBar.tsx  HostKeyTrustDialog.tsx
src/components/editor/: CodeMirrorEditor.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  SplashScreen.tsx  ThemeToggle.tsx  TopBar.tsx
src/components/preview/: PreviewPanel.tsx
src/components/settings/: SettingsDialog.tsx
src/components/transfers/: ConflictDialog.tsx  TransferQueuePanel.tsx
src/lib/: animations.ts  api.ts  dragState.ts  format.ts  path.ts  transferResolve.ts  updater.ts
src/lib/i18n/: translations.ts  useT.ts
src/lib/stores/: bookmarksStore.ts  clipboardStore.ts  connectionsStore.ts  editWatchStore.ts  paneStore.ts  settingsStore.ts  toastStore.ts  transfersStore.ts  uiStore.ts  updateStore.ts
