[package]
name = "ferry"
version = "0.5.0"
description = "Ferry — a modern SFTP client."
authors = ["Paul Carouge <contact.carouge@gmail.com>"]
license = "MIT"
repository = "https://github.com/Paul-Carouge/Ferry-SFTP"
homepage = "https://github.com/Paul-Carouge/Ferry-SFTP"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
uuid = { version = "1.20.0", features = ["v4"] }
thiserror = "2.0.18"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
dirs = "6.0.0"
tauri-plugin-drag = "2.1.1"
